MET-6262 filter to nonNull objects for getFailedFullBeans